# schema_documenter

./: build.sh  pyproject.toml  schema_documenter.py
schema_documenter/: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.sh
schema_documenter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
schema_documenter/schema_documenter/: __init__.py  schema_documenter.py
schema_documenter/tests/: conftest.py  test_schema_documenter.py
