[project]
name = "schema-documenter"
version = "0.1.0"
description = "A tool for documenting dataset schemas"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "pyreadstat>=1.1.0",
    "pyarrow>=6.0.0",
    "rpy2>=3.5.0",
    "numpy>=1.21.0"
]

[project.scripts]
schema-documenter = "schema_documenter.schema_documenter.schema_documenter:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
