[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schema-documenter"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A tool for documenting dataset schemas"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["schema", "documentation", "data", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "pyreadstat>=1.1.0",
    "pyarrow>=6.0.0",
    "rpy2>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/schema-documenter"
Documentation = "https://github.com/yourusername/schema-documenter#readme"
Repository = "https://github.com/yourusername/schema-documenter.git"
Issues = "https://github.com/yourusername/schema-documenter/issues" 